few minor updates in website

--- a/mern-estate/client/index.html
+++ b/mern-estate/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pritam Estate</title>
+    <title>Haven: Where Dreams find Home</title>
+    <link rel="icon" type="image/png" href="Havenlogo.png" />
   </head>
   <body>
     <div id="root"></div>
